# zina-ai-platform

./: .env.example  claude_task.txt  main.py  push.sh  pyproject.toml
Research/Voice AI/: provider_decision.md  zina_master_test.md
agents/: base_agent.py  business_dev_agent.py  document_agent.py  finance_agent.py  general_agent.py  hotel_agent.py  lead_research_agent.py  zina_content_creator_agent.py
core/: agent_loader.py  config.py  orchestrator.py  registry.py  router.py  tool_loader.py  workflow_loader.py
dashboard/: streamlit_app.py
dashboard/components/: agent_panel.py  content_creator_panel.py  mcp_panel.py  next_steps.py  overview.py  styles.py  system_status.py  tool_panel.py  workflow_panel.py
tests/: test_agents.py  test_mcp.py  test_tools.py  test_workflows.py
tools/: base_tool.py  email_tool.py  file_tool.py  mock_data_tool.py  ocr_tool.py  report_tool.py  tool_registry.py  web_search_tool.py
tools/mcp/: base_mcp.py  mcp_registry.py  n8n_mcp.py
workflows/: base_workflow.py  hotel_workflow.py  workflow_registry.py
